--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pylib"
+name = "dsalt"
 version = "0.1.0"
 authors = ["GoodManWEN <44322449+GoodManWEN@users.noreply.github.com>"]
 edition = "2018"
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-name = "testlib"
+name = "dsalt"
 crate-type = ["cdylib"]
 
 [dependencies.pyo3]
@@ -15,4 +15,4 @@ version = "0.13.2"
 features = ["extension-module"]
 
 [dependencies]
-hashbrown = "0.9"
+seahash = "4.1.0"
